--- a/changgou-parent/changgou-service/changgou-service-goods/src/main/resources/application.yml
+++ b/changgou-parent/changgou-service/changgou-service-goods/src/main/resources/application.yml
@@ -20,3 +20,7 @@ feign:
     enabled: true
 logging:
   level.com: debug
+# 开启驼峰命名设置，自动将下划线形式转化为驼峰
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
