--- a/changgou-parent/changgou-service-api/pom.xml
+++ b/changgou-parent/changgou-service-api/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>changgou-service-goods-api</module>
         <module>changgou-service-content-api</module>
+        <module>changgou-service-search-api</module>
     </modules>
 
     <dependencies>
